Updated editor to allow starting workflow without debugging from command line.

--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Scripting\ScriptComponentEditor.cs" />
     <Compile Include="Scripting\ScriptEditorLauncher.cs" />
     <Compile Include="SemanticVersion.cs" />
+    <Compile Include="LoadAction.cs" />
     <Compile Include="TypeVisualizerDescriptor.cs" />
     <Compile Include="TypeVisualizerMap.cs" />
     <Compile Include="WorkflowDisposable.cs" />
