Ensure async initialization events do not crash the editor after form closing.

--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -90,6 +90,7 @@
     <Compile Include="CueBannerTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FormScheduler.cs" />
     <Compile Include="GraphView\WorkflowEditorControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
