Added preliminary support for vector graphics rendering of workflow icons.

--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -223,6 +223,7 @@
     <Compile Include="MultidimensionalArrayConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
     <Compile Include="WorkflowElementCategoryAttribute.cs" />
+    <Compile Include="WorkflowIconAttribute.cs" />
     <Compile Include="WorkflowRuntimeException.cs" />
     <Compile Include="WorkflowException.cs" />
     <Compile Include="Reactive\CombineTimestamp.cs" />
