--- a/Bonsai.Design/Bonsai.Design.csproj
+++ b/Bonsai.Design/Bonsai.Design.csproj
@@ -76,6 +76,7 @@
     <Compile Include="ConfigurationEditorService.cs" />
     <Compile Include="ControlObservable.cs" />
     <Compile Include="ControlScheduler.cs" />
+    <Compile Include="ExpressionBuilderIcon.cs" />
     <Compile Include="FolderBrowserDialog.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -139,6 +140,7 @@
     </Compile>
     <Compile Include="VisualizerMashup.cs" />
     <Compile Include="WorkflowComponentEditor.cs" />
+    <Compile Include="WorkflowIcon.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj">
