--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -105,11 +105,14 @@
     <Compile Include="IScriptEnvironment.cs" />
     <Compile Include="IWorkflowEditorService.cs" />
     <Compile Include="IWorkflowToolboxService.cs" />
-    <Compile Include="LandingPage.cs">
+    <Compile Include="RecentlyUsedFileView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StartScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LandingPage.Designer.cs">
-      <DependentUpon>LandingPage.cs</DependentUpon>
+    <Compile Include="StartScreen.Designer.cs">
+      <DependentUpon>StartScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Layout\DialogLauncher.cs" />
     <Compile Include="Layout\NestedEditorDialog.cs">
@@ -183,8 +186,8 @@
     <EmbeddedResource Include="GraphView\GraphView.resx">
       <DependentUpon>GraphView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LandingPage.resx">
-      <DependentUpon>LandingPage.cs</DependentUpon>
+    <EmbeddedResource Include="StartScreen.resx">
+      <DependentUpon>StartScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
