Internalized script interface to avoid loading editor assembly during bootstrap.

--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -73,7 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppResult.cs" />
-    <Compile Include="ScriptExtensionsEnvironment.cs" />
+    <Compile Include="ScriptExtensions.cs" />
     <Compile Include="TempDirectory.cs" />
     <Compile Include="GalleryPackagePathResolver.cs" />
     <Compile Include="EditorResult.cs" />
