Added operators for creating and updating Matrix2 and Matrix3 uniform values.

--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -69,6 +69,8 @@
     <Compile Include="BufferBinding.cs" />
     <Compile Include="ComputeProgram.cs" />
     <Compile Include="Configuration\ViewportEffectConfiguration.cs" />
+    <Compile Include="CreateMatrix2.cs" />
+    <Compile Include="CreateMatrix3.cs" />
     <Compile Include="CreateMatrix4.cs" />
     <Compile Include="ExtrinsicsModelView.cs" />
     <Compile Include="CreateTransform.cs" />
