--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Expressions\IncludeWorkflowBuilder.cs" />
     <Compile Include="Expressions\IWorkflowExpressionBuilder.cs" />
     <Compile Include="Expressions\Properties\ByteProperty.cs" />
+    <Compile Include="Expressions\PropertyMappingNameConverter.cs" />
     <Compile Include="Expressions\PropertySource.cs" />
     <Compile Include="Expressions\PropertySourceTypeDescriptionProvider.cs" />
     <Compile Include="Expressions\ResourceSubjectBuilder.cs" />
