Refactored visualizer image input observable into common helper class.

--- a/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
+++ b/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
@@ -151,6 +151,7 @@
     <Compile Include="IplImageVisualizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimestampedIplImageVisualizer.cs" />
+    <Compile Include="VisualizerHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="VideoPlayer.resx">
