Added operator for testing intersection of a point with various shapes.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -77,6 +77,7 @@
     <Compile Include="CapturePropertyCollection.cs" />
     <Compile Include="Circle.cs" />
     <Compile Include="ColorBalance.cs" />
+    <Compile Include="ContainsPoint.cs" />
     <Compile Include="ContourPoints.cs" />
     <Compile Include="CreateExtrinsics.cs" />
     <Compile Include="CreateIntrinsics.cs" />
