Added support for pasting texture configurations directly into material shaders.

--- a/Bonsai.Shaders.Design/Bonsai.Shaders.Design.csproj
+++ b/Bonsai.Shaders.Design/Bonsai.Shaders.Design.csproj
@@ -82,6 +82,9 @@
     <Compile Include="Configuration\DragTextureConfiguration.cs" />
     <Compile Include="Configuration\MaterialConfigurationEditor.cs" />
     <Compile Include="Configuration\MtlReader.cs" />
+    <Compile Include="Configuration\ShaderCollectionEditorControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Configuration\UniformConfigurationCollectionEditor.cs" />
     <Compile Include="Configuration\MeshConfigurationEditor.cs" />
     <Compile Include="Configuration\FramebufferAttachmentConfigurationCollectionEditor.cs" />
