Added support for generating real-time matched fixed update microsteps.

--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -130,6 +130,7 @@
     <Compile Include="MatrixTransform.cs" />
     <Compile Include="TransformRelative.cs" />
     <Compile Include="Translate.cs" />
+    <Compile Include="UpdateStep.cs" />
     <Compile Include="ViewportEffect.cs" />
     <Compile Include="ImageTextureBinding.cs" />
     <Compile Include="Input\MouseCursor.cs" />
