--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CreateMatrix2.cs" />
     <Compile Include="CreateMatrix3.cs" />
     <Compile Include="CreateMatrix4.cs" />
+    <Compile Include="LoadImage.cs" />
     <Compile Include="RefreshRate.cs" />
     <Compile Include="RenderTexture.cs" />
     <Compile Include="ExtrinsicsModelView.cs" />
