--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CreateMatrix2.cs" />
     <Compile Include="CreateMatrix3.cs" />
     <Compile Include="CreateMatrix4.cs" />
+    <Compile Include="EnumerateTextures.cs" />
     <Compile Include="LoadImage.cs" />
     <Compile Include="RefreshRate.cs" />
     <Compile Include="RenderTexture.cs" />
@@ -217,7 +218,6 @@
     <Compile Include="Configuration\ViewportState.cs" />
     <Compile Include="WarpPerspective.cs" />
     <Compile Include="WindowClosed.cs" />
-    <Compile Include="WindowSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Bonsai.Shaders.nuspec">
