Added Format operator to allow custom formatting of strings from data.

--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Expressions\DeferBuilder.cs" />
     <Compile Include="Expressions\DisableBuilder.cs" />
     <Compile Include="Expressions\ExtendedPropertyDescriptor.cs" />
+    <Compile Include="Expressions\FormatBuilder.cs" />
     <Compile Include="Expressions\GroupContext.cs" />
     <Compile Include="Expressions\GroupWorkflowBuilder.cs" />
     <Compile Include="Expressions\ExternalizedPropertyDescriptor.cs" />
