--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CreateMatrix3.cs" />
     <Compile Include="CreateMatrix4.cs" />
     <Compile Include="LoadImage.cs" />
+    <Compile Include="LoadResources.cs" />
     <Compile Include="RefreshRate.cs" />
     <Compile Include="RenderTexture.cs" />
     <Compile Include="ExtrinsicsModelView.cs" />
@@ -121,8 +122,10 @@
     <Compile Include="LatestOnRenderFrame.cs" />
     <Compile Include="MeshAttributeMapping.cs" />
     <Compile Include="MeshBounds.cs" />
+    <Compile Include="ResourceConfigurationCollection.cs" />
     <Compile Include="ResourceDictionary.cs" />
     <Compile Include="ResourceKey.cs" />
+    <Compile Include="ResourceLoader.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="RotateAxisAngle.cs" />
     <Compile Include="RotateQuaternion.cs" />
