Added specialized tab control class to allow adjusting display rectangle.

--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -100,6 +100,9 @@
     </Compile>
     <Compile Include="EditorResult.cs" />
     <Compile Include="GraphView\GraphViewTextDrawMode.cs" />
+    <Compile Include="GraphView\WorkflowEditorTabControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="GraphView\WorkflowGraphViewEditorService.cs" />
     <Compile Include="HotKeyMessageFilter.cs" />
     <Compile Include="IScriptEnvironment.cs" />
