Fixed #188. Added support for batching drawing operators.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -85,6 +85,22 @@
     <Compile Include="CreatePoint2d.cs" />
     <Compile Include="CreatePoint2f.cs" />
     <Compile Include="CreatePoint3d.cs" />
+    <Compile Include="Drawing\Canvas.cs" />
+    <Compile Include="Drawing\CreateCanvas.cs" />
+    <Compile Include="Drawing\CreateFont.cs" />
+    <Compile Include="Drawing\CropCanvas.cs" />
+    <Compile Include="Drawing\DrawCanvas.cs" />
+    <Compile Include="Drawing\Circle.cs" />
+    <Compile Include="Drawing\DrawContours.cs" />
+    <Compile Include="Drawing\Ellipse.cs" />
+    <Compile Include="Drawing\AddImage.cs" />
+    <Compile Include="Drawing\CanvasElement.cs" />
+    <Compile Include="Drawing\Line.cs" />
+    <Compile Include="Drawing\FillPolygon.cs" />
+    <Compile Include="Drawing\PolyLine.cs" />
+    <Compile Include="Drawing\Rectangle.cs" />
+    <Compile Include="Drawing\AddText.cs" />
+    <Compile Include="Drawing\MergeCanvas.cs" />
     <Compile Include="Extrinsics.cs" />
     <Compile Include="HsvScalarConverter.cs" />
     <Compile Include="Intrinsics.cs" />
