--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Expressions\IGroupWorkflowBuilder.cs" />
     <Compile Include="Expressions\IncludeContext.cs" />
     <Compile Include="Expressions\IncludeWorkflowBuilder.cs" />
+    <Compile Include="Expressions\IndexBuilder.cs" />
     <Compile Include="Expressions\IWorkflowExpressionBuilder.cs" />
     <Compile Include="Expressions\Properties\ByteProperty.cs" />
     <Compile Include="Expressions\PropertyMappingNameConverter.cs" />
