--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Expressions\BehaviorSubjectBuilder.cs" />
     <Compile Include="Expressions\DeferBuilder.cs" />
     <Compile Include="Expressions\DisableBuilder.cs" />
+    <Compile Include="Expressions\DisableExpression.cs" />
     <Compile Include="Expressions\ExtendedPropertyDescriptor.cs" />
     <Compile Include="Expressions\FormatBuilder.cs" />
     <Compile Include="Expressions\GroupContext.cs" />
