Refactored empty expression into its own extension class.

--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Expressions\DeferBuilder.cs" />
     <Compile Include="Expressions\DisableBuilder.cs" />
     <Compile Include="Expressions\DisableExpression.cs" />
+    <Compile Include="Expressions\EmptyExpression.cs" />
     <Compile Include="Expressions\ExtendedPropertyDescriptor.cs" />
     <Compile Include="Expressions\FormatBuilder.cs" />
     <Compile Include="Expressions\GroupContext.cs" />
