--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Expressions\EmptyExpression.cs" />
     <Compile Include="Expressions\ExtendedPropertyDescriptor.cs" />
     <Compile Include="Expressions\FormatBuilder.cs" />
+    <Compile Include="Expressions\GetValueOrDefault.cs" />
     <Compile Include="Expressions\GroupContext.cs" />
     <Compile Include="Expressions\GroupWorkflowBuilder.cs" />
     <Compile Include="Expressions\ExternalizedPropertyDescriptor.cs" />
