--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -70,6 +70,7 @@
     <Compile Include="BufferBinding.cs" />
     <Compile Include="ComputeProgram.cs" />
     <Compile Include="ComputeProgramNameConverter.cs" />
+    <Compile Include="Configuration\PolygonModeState.cs" />
     <Compile Include="Configuration\ScissorState.cs" />
     <Compile Include="Configuration\ViewportEffectConfiguration.cs" />
     <Compile Include="Constants.cs" />
