--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Scale.cs" />
     <Compile Include="MatrixTransform.cs" />
     <Compile Include="ShaderResources.cs" />
+    <Compile Include="StoreImage.cs" />
     <Compile Include="SubjectManager.cs" />
     <Compile Include="TextureResources.cs" />
     <Compile Include="TransformRelative.cs" />
