--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -70,6 +70,8 @@
     <Compile Include="BufferBinding.cs" />
     <Compile Include="ComputeProgram.cs" />
     <Compile Include="ComputeProgramNameConverter.cs" />
+    <Compile Include="Configuration\Cubemap.cs" />
+    <Compile Include="Configuration\ImageCubemap.cs" />
     <Compile Include="Configuration\PolygonModeState.cs" />
     <Compile Include="Configuration\ScissorState.cs" />
     <Compile Include="Configuration\ViewportEffectConfiguration.cs" />
