Added support for rendering draw commands to a cubemap texture.

--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -87,6 +87,7 @@
     <Compile Include="MaterialNameConverter.cs" />
     <Compile Include="MeshResources.cs" />
     <Compile Include="RefreshRate.cs" />
+    <Compile Include="RenderCubemap.cs" />
     <Compile Include="RenderTexture.cs" />
     <Compile Include="ExtrinsicsModelView.cs" />
     <Compile Include="CreateTransform.cs" />
