Added CreateFont operator as a serialization compatible font property source.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Drawing\AddTextBox.cs" />
     <Compile Include="Drawing\Canvas.cs" />
     <Compile Include="Drawing\CreateCanvas.cs" />
+    <Compile Include="Drawing\CreateFont.cs" />
     <Compile Include="Drawing\CropCanvas.cs" />
     <Compile Include="Drawing\DrawCanvas.cs" />
     <Compile Include="Drawing\Circle.cs" />
