Added RetrieveImage operator to allow reading image data from a texture buffer.

--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -142,6 +142,7 @@
     <Compile Include="ResourceLoader.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="ResourceNameConverter.cs" />
+    <Compile Include="RetrieveImage.cs" />
     <Compile Include="RotateAxisAngle.cs" />
     <Compile Include="RotateQuaternion.cs" />
     <Compile Include="RotateX.cs" />
