Added support for reading and writing lines from the standard IO stream.

--- a/Bonsai.System/Bonsai.System.csproj
+++ b/Bonsai.System/Bonsai.System.csproj
@@ -59,6 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IO\ReadLine.cs" />
+    <Compile Include="IO\WriteLine.cs" />
     <Compile Include="IO\EnumerateFileSystemEntries.cs" />
     <Compile Include="IO\EnumerateFiles.cs" />
     <Compile Include="IO\EnumerateDirectories.cs" />
