--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Expressions\DisableExpression.cs" />
     <Compile Include="Expressions\DisconnectExpression.cs" />
     <Compile Include="Expressions\EmptyExpression.cs" />
+    <Compile Include="Expressions\ExpressionBuilderArgumentDescriptor.cs" />
     <Compile Include="Expressions\ExtendedPropertyDescriptor.cs" />
     <Compile Include="Expressions\FormatBuilder.cs" />
     <Compile Include="Expressions\GetValueOrDefault.cs" />
