Improved determinism and stability of topological sorting algorithm.

--- a/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
+++ b/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="OverloadedCombinatorBuilderTests.cs" />
     <Compile Include="GenericCombinatorBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TopologicalSortTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj">
